# lsd

./: Makefile  counter.cc  counter.hh  entity.hh  flake.nix  list.hh  meson.build  pad.cc  pad.hh  ps-exe.ld
src/: biggrand.hh  cdfile.cc  cdfile.hh  counter.hh  crt0.s  drawobj.cc  entity.cc  entity.hh  file.cc  file.hh  game.cc  game.hh  gpu.cc  gpu.hh  list.cc  list.hh  main.cc  memory.cc  model.cc  model.hh  modelset.cc  modelset.hh  object.cc  object.hh  pad.cc  pad.hh  parent.cc  parent.hh  renderer.cc  renderer.hh  renderobj.cc  subsystems.hh  util.cc  util.hh
